2007-10-11  Brian Gough  <bjg@network-theory.co.uk>

	* DLD-FUNCTIONS/fftn.cc, DLD-FUNCTIONS/regexp.cc, dirfns.cc,
	input.cc: Spelling fixes.

2007-10-10  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-sbm-sbm.cc (bool_matrix_to_double_matrix):
	New conversion function.
	(install_sbm_sbm_ops): Install it.

	* ov-re-mat.cc (double): Handle sparse as a special case.

2007-10-10  Olli Saarela  <Olli.Saarela@kcl.fi>

	* data.cc, debug.cc, dirfns.cc, error.cc, file-io.cc, help.cc,
	load-save.cc, ov-fcn-inline.cc, parse.y, pr-output.cc, symtab.cc,
	syscalls.cc, toplev.cc, variables.cc, DLD-FUNCTIONS/bsxfun.cc,
	DLD-FUNCTIONS/cellfun.cc, DLD-FUNCTIONS/fft.cc,
	DLD-FUNCTIONS/fft2.cc, DLD-FUNCTIONS/fftw.cc,
	DLD-FUNCTIONS/gcd.cc, DLD-FUNCTIONS/lsode.cc,
	DLD-FUNCTIONS/luinc.cc, DLD-FUNCTIONS/matrix_type.cc,
	DLD-FUNCTIONS/rand.cc, DLD-FUNCTIONS/regexp.cc,
	DLD-FUNCTIONS/sparse.cc, DLD-FUNCTIONS/spchol.cc,
	DLD-FUNCTIONS/splu.cc, DLD-FUNCTIONS/spparms.cc: Spelling fixes.

2007-10-10  Kim Hansen  <kimhanse@gmail.com>

	* DLD-FUNCTIONS/lpsolve.cc: Delete.
	* Makefile.in (DLD_XSRC): Remove it from the list.

        * data.cc (Fsqueeze): Document 2d behaviour.
        * ov-range.h (octave_range::squeeze): New function.

2007-10-09  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/urlwrite.cc (urlget_cleanup): New function.
	(urlget): Protect call to curl_easy_perform with
	BEGIN_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE and
	END_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE.

2007-10-09  David Bateman  <dbateman@free.fr>

	* input.cc (accept_line): Drop this function and remove automatic
	insertion of closing quotes as the transpose operator confuses it.
	(initialize_command_input): Remove accept_line from here as well.
	
2007-10-09  John W. Eaton  <jwe@octave.org>

	* ov-mapper.cc (octave_mapper::apply): If possible, use
	d_d_map_fcn to handle complex values which have imag(z) == 0.

	* DLD-FUNCTIONS/urlwrite.cc (Furlwrite, Furlread) [! HAVE_CURL]: