@@ -1,3 +1,7 @@
+2007-10-11  John W. Eaton  <jwe@octave.org>
+
+	* DLD-FUNCTIONS/urlwrite.cc (urlget): Disable use of EPSV mode.
+
 2007-10-11  Brian Gough  <bjg@network-theory.co.uk>
 
 	* DLD-FUNCTIONS/fftn.cc, DLD-FUNCTIONS/regexp.cc, dirfns.cc,
